--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: rgb(25,25,25);">
     <div style="display:flex; justify-content: center; align-items: center; width:100%; height: 60vh">
-        <h1 style="color:orange;">(╯°□°)╯︵ ┻━┻</h1>
+        <h1 style="color: rgb(255,135,0);">(╯°□°)╯︵ ┻━┻</h1>
     </div>
 </body>
 </html>
