--- a/album_club/bands/phantogram/ceremony.html
+++ b/album_club/bands/phantogram/ceremony.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-sm-8 align-self-center">
                     <h2 id="album-name"></h2>
-                    <q id="band-name"></q>
+                    <h4 id="band-name"></h4>
                     <p>Published: 2020-03-06</p>
                     <p>Label: Republic Records</p>
                     <p>Genre: Alternative</p>
@@ -36,7 +36,7 @@
     <div class="container py-3">
         <h3>Rating</h3>
         <p id="album-rating"></p>
-        <div class="container-fluid text-light bg-dark">
+        <div class="container-fluid text-light bg-dark rounded">
             <div id="carouselContent" class="carousel slide" data-ride="carousel" data-interval=0>
                 <div id="comments" class="carousel-inner" role="listbox">
                     <!-- Added through script -->
@@ -54,7 +54,19 @@
             </div>
         </div>
         <div class="container py-3">
-            <ul id="track-ratings" class="list-group"></ul>
+            <ul id="track-ratings" class="list-group">
+                <!-- Added through script -->
+            </ul>
+        </div>
+        <div class="container py-3 my-3 bg-secondary text-light rounded">
+            <h3>Submitter Comments</h3>
+            <p>
+                I knew this album was a risk for the group because it's dark and experimental. In my mind, I knew it wasn't a banger of an album, but there are some bangers in it. It's more of an experience, feeling ALL the emotions of losing someone really close to you.
+                <br><br>
+                "Falling Into Happiness," "Dear God," "Glowing," "Mr. Impossible," and "In A Spiral" are my favorites on the album. "Falling Into Happiness" I listen to quite regularly.
+                <br><br>
+                This was also a glimpse to get people into female indie bands. I feel like there are so many good ones that people haven't listened to, like the Yeah Yeah Yeahs, Metric, and Chvrches. Plus, Phantogram has an amazing discography that everyone should check out.
+            </p><p>- Eric D.</p>
         </div>
     </div>
     <div class="container text-light bg-dark py-3">
