--- a/album_club/bands/phantogram/ceremony.html
+++ b/album_club/bands/phantogram/ceremony.html
@@ -15,11 +15,11 @@
     </head>
 <body>
 
-    <div class="container text-light bg-dark pb-3">
+    <div class="container text-light bg-dark py-3">
         <div id="album-details" class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <img class="img-fluid" src="https://e-cdns-images.dzcdn.net/images/cover/134de7a67c13124ff7b186883d1f7efe/500x500-000000-80-0-0.jpg" alt="Ceremony">
+                    <img class="img-fluid" src="https://e-cdns-images.dzcdn.net/images/cover/134de7a67c13124ff7b186883d1f7efe/500x500-000000-80-0-0.jpg" height="500" width="500" alt="Ceremony">
                 </div>
                 <div class="col-sm-8 align-self-center">
                     <h2 id="album-name"></h2>
