--- a/album_club/bands/phantogram/ceremony.html
+++ b/album_club/bands/phantogram/ceremony.html
@@ -19,7 +19,7 @@
         <div id="album-details" class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <img class="img-fluid" src="https://e-cdns-images.dzcdn.net/images/cover/134de7a67c13124ff7b186883d1f7efe/500x500-000000-80-0-0.jpg" height="500" width="500" alt="Ceremony">
+                    <img class="img-fluid" src="assets\phantogram-ceremony-500x.jpg" height="500" width="500" alt="Ceremony">
                 </div>
                 <div class="col-sm-8 align-self-center">
                     <h2 id="album-name"></h2>
